[package]
name = "god_prime_trainer"
version = "0.1.0"
authors = ["gsala"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
clap = "2.33.0"
enigo = "0.0.13"
read-process-memory = "0.1.2"
sysinfo = "0.9.1"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }